# vs-preview-plugins

./: .editorconfig  README.md  mypy.ini  requirements-dev.txt  ruff.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: lint.yml
.stubs/vapoursynth/: __init__.pyi
.templates/: pyproject_template.toml
dft-view/: README.md  freq_dft_view.ppy  pyproject.toml  requirements.txt
dft-view/vspreview_plugin_dft_view/: __init__.py  freq_dft_view.py
dvdtools/: README.md  __init__.py  dvdtools.ppy  main.ppy  pyproject.toml  requirements.txt
dvdtools/components/iso_browser/: ffmpeg_handler.py  tab.py  tree_manager.py  types.py
dvdtools/components/iso_browser/ui/: __init__.py  layout.py  widgets.py
dvdtools/vspreview_plugin_dvdtools/: __init__.py
dvdtools/vspreview_plugin_dvdtools/components/iso_browser/: tab.py  tree_manager.py
dvdtools/vspreview_plugin_dvdtools/components/iso_browser/ui/: layout.py
manga-reader/: manga_unpacking.ppy
native-res/: README.md  kernel.py  native_resolution.ppy  pyproject.toml
native-res/vspreview_plugin_native_res/: __init__.py  frequency.py  plugin.py  rescale.py  utils.py
resize_calculator/: resize_calc.ppy
simple-histogram/: README.md  pyproject.toml  simple_hist.ppy
simple-histogram/vspreview_plugin_simple_histogram/: __init__.py
sivtc/: README.md  pyproject.toml  requirements.txt  sivtc.ppy
sivtc/vspreview_plugin_sivtc/: __init__.py
subway-surfers/: requirements.txt  subway-surfers.ppy
trace-moe/: LICENSE  README.md  pyproject.toml  trace-moe.ppy
trace-moe/components/: __init__.py
trace-moe/components/trace/: __init__.py  models.py  trace_tab.py  worker.py
trace-moe/vspreview_plugin_trace_moe/: __init__.py  trace_moe.py
trace-moe/vspreview_plugin_trace_moe/components/trace/: __init__.py  models.py  trace_tab.py  worker.py
