[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vspreview-plugin-dft-view"
dynamic = ["version"]
description = "A VSPreview plugin that displays the Discrete Fourier Transform (DFT) of all planes of a video node."
authors = [{ name = "Jaded Encoding Thaumaturgy" }]
maintainers = [
    { name = "Jaded Encoding Thaumaturgy", email = "jaded.encoding.thaumaturgy@gmail.com" },
]
requires-python = ">=3.12"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics",
]

dependencies = ["VapourSynth", "vspreview", "vsjetpack"]

[dependency-groups]
dev = ["mypy", "ruff", "twine"]

[project.entry-points."vspreview.plugins"]
dft-view = "vspreview_plugin_dft_view"

[tool.hatch.version]
path = "vspreview_plugin_dft_view/__init__.py"

[tool.hatch.build.targets.wheel]
include = ["vspreview_plugin_dft_view"]
