[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vspreview-plugin-sivtc"
dynamic = ["version"]
description = "A VSPreview plugin to check simple IVTC patterns using SIVTC (Simple Inverse Telecine)."
authors = [{ name = "Jaded Encoding Thaumaturgy" }]
maintainers = [
    { name = "Jaded Encoding Thaumaturgy", email = "jaded.encoding.thaumaturgy@gmail.com" },
]
requires-python = ">=3.12"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics",
]

dependencies = ["VapourSynth", "vspreview", "vsjetpack", "PyQt6"]

[dependency-groups]
dev = ["mypy", "ruff", "twine"]

[project.entry-points."vspreview.plugins"]
sivtc = "vspreview_plugin_sivtc:SIVTCPlugin"

[tool.vspreview.config]
namespace = "dev.setsugen.sivtc"
display_name = "SIVTC"

[tool.hatch.version]
path = "vspreview_plugin_sivtc/__init__.py"

[tool.hatch.build.targets.wheel]
include = ["vspreview_plugin_sivtc"]
