[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vspreview-plugin-trace-moe"
dynamic = ["version"]
description = """
A Vapoursynth Preview plugin that uses the Trace.moe API to trace back
a frame to an anime and its corresponding episode.
"""
authors = [{ name = "LightArrowsEXE" }]
maintainers = [
    { name = "LightArrowsEXE", email = "LightArrowsReboot@gmail.com" },
    { name = "Jaded Encoding Thaumaturgy", email = "jaded.encoding.thaumaturgy@gmail.com" },
]
requires-python = ">=3.12"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics",
]

dependencies = [
    "VapourSynth",
    "vspreview",
    "vsjetpack",
    "jetpytools",
    "PyQt6",
    "requests",
]

[dependency-groups]
dev = ["mypy", "ruff", "twine"]

[project.entry-points."vspreview.plugins"]
trace-moe = "vspreview_plugin_trace_moe:TraceMoePlugin"

[tool.hatch.version]
path = "vspreview_plugin_trace_moe/__init__.py"

[tool.hatch.build.targets.wheel]
include = ["vspreview_plugin_trace_moe"]
